# shell2

./: CMakeLists.txt  main.c
include/: builtins.h  executor.h  jobs.h  parser.h  utils.h
src/: builtins.c  executor.c  jobs.c  main.c  parser.c  utils.c
